# CMakeList.txt : CMake project for LinkListMain, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (LinkListMain "LinkListMain.cpp" "LinkListMain.h" "LLADT.h" "LLADT.cpp")

# TODO: Add tests and install targets if needed.
